# WorkAsistantPractice

./: .env  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  download_models.py  main.py  pyproject.toml
backend/migration/: env.py
backend/migration/versions/: 085a835a7b1a_iniss.py  0fbd26da5efa_change_embedding_dim_to_1024.py  2d067559e424_first.py  b9d06c389abb_768_to_1024.py  bcb9affdd402_change_dim_from_768_to_1024.py  e84407e9f855_make_nullable_field_category.py  f72686a24626_add_table_document_and_documentchunk.py
backend/scripts/: download_models.py  test_stt_service.py  test_tts_service.py  upload_documents.py
backend/src/api/: dependencies.py  middleware.py  routers.py
backend/src/api/v1/: document.py  root.py  routers.py  stt.py  tts.py
backend/src/core/: cache.py  config.py
backend/src/exceptions/: stt_exceptions.py  tts_exceptions.py
backend/src/models/: document.py
backend/src/repository/: user.py
backend/src/repository/document/: document_repository.py  search_repository.py
backend/src/schemas/: document.py  rag.py  stt_schema.py  tts_schema.py
backend/src/scripts/: download_models.py
backend/src/service/: embedding_model_service.py  llm_client_service.py  model_manager_service.py  rag_service.py  stt_service.py  tts-sevice.py  tts_service.py  user.py
frontend/: .env.example  .gitignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/components/chat/: ChatComposer.vue  ChatHeader.vue  ChatLayout.vue  ChatMessage.vue  ChatMessageList.vue  ChatSources.vue
frontend/app/composables/: useAudioRecorder.ts  useRagStream.ts  useStt.ts  useTts.ts  useVoiceInput.ts
frontend/app/pages/: index.vue
frontend/app/types/: chat.ts  runtime-config.d.ts  voice.ts
migration/: env.py
src/: S3.py  logger.py
src/api/: dependencies.py  routers.py
src/api/v1/: routers.py
src/core/: config.py  database.py
src/models/: user.py
src/repository/: user.py
src/schemas/: user.py
(+13 files in other folders)
