[project]
name = "fastapiappstructur"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim",email = "maksimbegisev119@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
