[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "^3.11"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sentence-transformers (>=5.5.1)",
    "aiohttp (>=3.14.0,<4.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "booktype (>=1.5,<2.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://pytorch.org"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}
