[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aiohttp==3.14.1",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.136.3",
    "omegaconf==2.3.1",
    "pgvector==0.4.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "redis==8.0.0",
    "sqlalchemy==2.0.50",
    "uvicorn==0.49.0",
]

[project.optional-dependencies]
ai = [
    "torch",
    "faster-whisper==1.2.1",
    "sentence-transformers==5.5.1",
]